fix: resolve issue #1933; remove overlap of scrollbar with pane header's border

--- a/www/src/scss/navigator/shabad/_multipane.scss
+++ b/www/src/scss/navigator/shabad/_multipane.scss
@@ -1,7 +1,6 @@
 @each $pane, $color in $multipane-colors {
   .#{$pane} {
     border-bottom: 2px solid $color;
-    box-sizing: content-box;
     display: flex;
     justify-content: space-between;
     position: relative;
